force-app/main/default/objects/HFS_Evaluation__c/HFS_Evaluation__c.object-meta.xml
<CustomObject>
    <description>Versioned assessment of an outcome, recommendation, or intervention.</description>
    <label>Evaluation</label>
    <nameField>
        <displayFormat>EVA-{000000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>