force-app/main/default/objects/HFS_Evaluation__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>