force-app/main/default/objects/HFS_Evaluation__c/fields/Evaluator_Id__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Id__c</fullName>
    <label>Evaluator ID</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>