force-app/main/default/objects/HFS_Evaluation__c/fields/Evaluator_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Type__c</fullName>
    <label>Evaluator Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HUMAN</fullName>
                <label>Human</label>
            </value>
            <value>
                <fullName>RULE</fullName>
                <label>Rule</label>
            </value>
            <value>
                <fullName>MODEL</fullName>
                <label>Model</label>
            </value>
            <value>
                <fullName>SYSTEM</fullName>
                <label>System</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>