force-app/main/default/objects/HFS_Evaluation__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome</label>
    <referenceTo>HFS_Outcome__c</referenceTo>
    <relationshipLabel>Evaluations by Outcome</relationshipLabel>
    <relationshipName>HFS_Evaluation_Outcome</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>