force-app/main/default/objects/HFS_Evaluation__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>