force-app/main/default/objects/HFS_Evaluation__c/fields/Verdict__c.field-meta.xml
<CustomField>
    <fullName>Verdict__c</fullName>
    <label>Verdict</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
                <label>Pass</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
                <label>Fail</label>
            </value>
            <value>
                <fullName>INCONCLUSIVE</fullName>
                <label>Inconclusive</label>
            </value>
            <value>
                <fullName>NEEDS_REVIEW</fullName>
                <label>Needs Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>